RESOLVED FIXED43913
InspectorController.h missing InspectorObject forward declaration
https://bugs.webkit.org/show_bug.cgi?id=43913
Summary InspectorController.h missing InspectorObject forward declaration
Ben Murdoch
Reported 2010-08-12 06:21:32 PDT
InspectorController.h needs to forward declare InspectorObject after http://trac.webkit.org/changeset/64722. Patch to follow.
Attachments
Patch. (1.11 KB, patch)
2010-08-12 07:35 PDT, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2010-08-12 07:35:14 PDT
WebKit Commit Bot
Comment 2 2010-08-12 10:52:30 PDT
Comment on attachment 64222 [details] Patch. Clearing flags on attachment: 64222 Committed r65258: <http://trac.webkit.org/changeset/65258>
WebKit Commit Bot
Comment 3 2010-08-12 10:52:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.