2010-08-12  Ben Murdoch  <benm@google.com>

Reviewed by Pavel Feldman.

        InspectorController.h missing InspectorObject forward declaration
        https://bugs.webkit.org/show_bug.cgi?id=43913

        Build fix so no new tests.

        * inspector/InspectorController.h: Adds the necessary forward declaration.

Canonical link: https://commits.webkit.org/56058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65258 268f45cc-cd09-0410-ab3c-d52691b4dbfc